--- a/advisoryServices/regulatoryCompliance.html
+++ b/advisoryServices/regulatoryCompliance.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Canadian Tax Consultancy </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
+    <title>Regulatory Compliance </title>
     <link rel="stylesheet" href="index.html">
     <link rel="stylesheet" href="contact.html">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -41,6 +41,7 @@
           <li><a href="/contact.html" data-index="7">Contact Us</a></li>
         </ul>
       </nav>
+      <button class="nav-toggle" aria-label="Open menu" aria-expanded="false"><i class="fa-solid fa-bars"></i></button>
     </div>
   </header>
 
@@ -51,20 +52,22 @@
       <div class="vertical-line"></div>
       <div class="content">
         <h5 class="sub-heading">CANADIAN EXPAT LEGAL SERVICES</h5>
-        <h2 class="main-heading">Canadian Tax Consultancy</h2>
+        <h2 class="main-heading">Regulatory Compliance</h2>
         <div class="red-line"></div>
+    <img src="/images/compliance.jpg" alt="Tax Consultancy" class="mobile-inline-hero" />
         <p style="color: #000;">
-          Advisory on Canadian taxation matters for individuals and businesses with cross-border obligations.
+          Expert guidance on regulatory compliance matters affecting Canadian expats, 
+          including banking, investment, and financial reporting requirements.
         </p>
         <p>
-          Managing taxes as a Canadian expat can be complex due to cross-border income, reporting requirements, and CRA 
-          compliance. We provide tailored tax consultancy for individuals and businesses, covering personal income tax, 
-          corporate filings, and tax planning strategies. Our goal is to minimize liabilities while ensuring full 
-          compliance with Canadian laws. By addressing double taxation risks and cross-jurisdiction challenges, 
-          we help clients maintain financial stability abroad.</p>
-        <P>
-            Our tax consultancy services help expats and businesses manage Canadian tax obligations effectively. We provide 
-            clarity on compliance and strategies to reduce tax burdens.</P>
+          Canadian expats face numerous regulatory compliance requirements, including 
+          FATCA compliance, CRS reporting, banking regulations, and investment compliance. 
+          We provide expert guidance on meeting all regulatory obligations while minimizing 
+          administrative burden. Our services ensure expats remain compliant with Canadian
+           and international regulations, avoiding penalties and maintaining financial access.
+          <P>
+            OOur compliance services help expats navigate complex regulatory requirements and 
+            maintain full compliance with Canadian and international financial regulations.</P>
         <a href="/contact.html" class="btn-apply">
           START YOUR APPLICATION <i class="fa-solid fa-arrow-right"></i>
         </a>
@@ -88,27 +91,27 @@
     <div class="benefits-grid">
       <div class="benefit-card">
         <div class="icon"><i class="fa-solid fa-circle-check"></i></div>
-        <p>Canadian tax residency determination</p>
+        <p>FATCA compliance</p>
       </div>
 
       <div class="benefit-card">
         <div class="icon"><i class="fa-solid fa-circle-check"></i></div>
-        <p>Cross-border tax planning</p>
+        <p>CRS reporting</p>
       </div>
 
       <div class="benefit-card">
         <div class="icon"><i class="fa-solid fa-circle-check"></i></div>
-        <p>Tax treaty optimization</p>
+        <p>Banking regulations</p>
       </div>
 
       <div class="benefit-card">
         <div class="icon"><i class="fa-solid fa-circle-check"></i></div>
-        <p>Compliance assistance</p>
+        <p>Investment compliance</p>
       </div>
 
       <div class="benefit-card">
         <div class="icon"><i class="fa-solid fa-circle-check"></i></div>
-        <p>International tax strategies</p>
+        <p>Financial reporting requirements</p>
       </div>
     </div>
   </div>
@@ -127,8 +130,9 @@
       <div class="vertical-line"></div>
       <div class="content">
         <h5 class="sub-heading">LET US HELP YOU</h5>
-        <h2 class="main-heading">To know more about Canadian Tax Consultancy services, please schedule a consultation with us.</h2>
+        <h2 class="main-heading">To know more about Regulatory Compliance services, please schedule a consultation with us.</h2>
         <div class="red-line"></div>
+    <img src="/images/about.jpg" alt="Consultation" class="mobile-inline-hero" />
         <p>
           KCTT assists international clients in obtaining residence and citizenship under the respective programs. Contact us to arrange an initial private consultation.
         </p>        
@@ -606,13 +610,9 @@ body { font-family: "Times New Roman", serif; }
 }
 
 
-.footer {
-  background: url("/images/footer.jpg") center/cover no-repeat;
-  color: #fff;
-  padding: 50px 20px 20px;
-  font-family: Arial, sans-serif;
-  text-align: justify;
-}
+.footer { position:relative; background:url("/images/footer.jpg") center/cover no-repeat; color:#fff; padding:50px 20px 20px; font-family:Arial, sans-serif; text-align:justify; overflow:hidden; }
+.footer::before { content:""; position:absolute; inset:0; background:rgba(255,205,0,0.55); backdrop-filter:blur(6px); -webkit-backdrop-filter:blur(6px); mix-blend-mode:multiply; }
+.footer > * { position:relative; z-index:1; }
 
 /* Footer Grid Layout */
 .footer-container {
@@ -689,7 +689,40 @@ body { font-family: "Times New Roman", serif; }
   text-align: justify;  
 }
 
+.main-nav a.active { color:red; }
+.nav-toggle { display:none; background:none; border:none; font-size:28px; color:#333; cursor:pointer; }
+.mobile-inline-hero { display:none; width:100%; height:auto; margin:14px 0 18px; border-radius:6px; }
+@media (max-width:768px){
+  body { padding-top:98px; }
+  .top-bar { position:fixed; top:0; left:0; right:0; z-index:1000; }
+  .main-header { position:fixed; top:34px; left:0; right:0; z-index:999; }
+  .header-inner { position:relative; }
+  .nav-toggle { display:inline-flex; align-items:center; justify-content:center; position:absolute; right:10px; top:50%; transform:translateY(-50%); padding:4px 6px; }
+  .main-nav ul { display:none; position:absolute; top:100%; right:0; width:260px; max-width:80%; flex-direction:column; background:#fff; padding:18px 22px 24px; gap:10px; box-shadow:0 12px 28px rgba(0,0,0,0.08); border:1px solid #e7e7e7; border-top:none; border-radius:0 0 0 8px; align-items:flex-end; text-align:left; }
+  .main-nav.active ul { display:flex; }
+  .main-nav ul li { width:100%; }
+  .main-nav a { font-size:15px; padding:6px 4px; display:block; width:100%; }
+  .main-nav a.active::after { display:none; }
+  .canada-pr { padding:42px 7% 50px; }
+  .canada-pr-container { flex-direction:column; }
+  .canada-pr-right { display:none; }
+  .mobile-inline-hero { display:block; }
+  .benefits-grid { grid-template-columns:repeat(2,1fr); }
+  .section-title { font-size:32px; }
+  .vertical-line { min-height:40px; }
+}
+
 </style>
+<script>
+document.addEventListener('DOMContentLoaded',()=>{
+  const t=document.querySelector('.nav-toggle');
+  const n=document.querySelector('.main-nav');
+  if(t&&n){
+    t.addEventListener('click',()=>{ const o=n.classList.toggle('active'); t.setAttribute('aria-expanded', o? 'true':'false'); });
+    n.querySelectorAll('a').forEach(a=>a.addEventListener('click',()=>{ if(window.innerWidth<=768 && n.classList.contains('active')){ n.classList.remove('active'); t.setAttribute('aria-expanded','false'); }}));
+  }
+});
+</script>
 
 </body>
 </html>
