--- a/advisoryServices/notarization.html
+++ b/advisoryServices/notarization.html
@@ -41,6 +41,10 @@
           <li><a href="/contact.html" data-index="7">Contact Us</a></li>
         </ul>
       </nav>
+      <!-- Hamburger toggle (mobile only) -->
+      <button class="nav-toggle" aria-label="Open menu" aria-expanded="false">
+        <i class="fa-solid fa-bars"></i>
+      </button>
     </div>
   </header>
 
@@ -53,6 +57,8 @@
         <h5 class="sub-heading">CANADIAN EXPAT LEGAL SERVICES</h5>
         <h2 class="main-heading">Notarization Services</h2>
         <div class="red-line"></div>
+        <!-- Mobile inline hero image (shown only on small screens) -->
+        <img src="/images/notarization.webp" alt="Notarization" class="mobile-inline-hero">
         <p>
           Notarization of all types of documents for use in Canada, ensuring validity and compliance.<br>
           Canadian authorities often require notarized documents for legal and administrative purposes.
@@ -125,6 +131,8 @@
         <h5 class="sub-heading">LET US HELP YOU</h5>
         <h2 class="main-heading">To know more about Notarization Services, please schedule a consultation with us.</h2>
         <div class="red-line"></div>
+        <!-- Mobile inline hero image (shown only on small screens) -->
+        <img src="/images/hand.jpg" alt="Consultation" class="mobile-inline-hero">
         <p>
           KCTT assists international clients in obtaining residence and citizenship under the respective programs. Contact us to arrange an initial private consultation.
         </p>        
@@ -270,6 +278,8 @@ body { font-family: "Times New Roman", serif; }
   margin: auto;
   width: 100%;
 }
+/* Active page link text color */
+.main-nav a.active { color: red; }
 
 .canada-pr {
   padding: 50px 10%;
@@ -695,7 +705,53 @@ body { font-family: "Times New Roman", serif; }
   text-align: justify;  
 }
 
+/* ---------------- Mobile-Only Enhancements ---------------- */
+.nav-toggle { display:none; background:none; border:none; font-size:28px; color:#333; cursor:pointer; }
+.mobile-inline-hero { display:none; width:100%; border-radius:6px; margin:15px 0; }
+
+@media (max-width:768px) {
+  /* Keep content pushed below fixed bars (top-bar + header) */
+  body { padding-top: 98px; }
+  .top-bar { position:fixed; top:0; left:0; right:0; z-index:1000; }
+  .main-header { position:fixed; top:34px; left:0; right:0; z-index:999; }
+  .header-inner { position:relative; padding:8px 12px; }
+  .nav-toggle { display:inline-flex; align-items:center; justify-content:center; position:absolute; right:10px; top:50%; transform:translateY(-50%); padding:4px 6px; }
+  /* Dropdown menu under header (like dominica.html) */
+  .main-nav ul { display:none; position:absolute; top:100%; right:0; width:260px; max-width:80%; flex-direction:column; background:#fff; padding:18px 22px 24px; gap:10px; box-shadow:0 12px 28px rgba(0,0,0,0.08); border:1px solid #e7e7e7; border-top:none; border-radius:0 0 0 8px; align-items:flex-end; text-align:left; }
+  .main-nav.active ul { display:flex; }
+  .main-nav ul li { width:100%; }
+  .main-nav a { font-size:15px; padding:6px 4px; display:block; width:100%; }
+  .main-nav a.active::after { display:none; }
+  .canada-pr { padding:42px 7% 50px; }
+  .canada-pr-container { flex-direction:column; gap:26px; }
+  .canada-pr-right { display:none; }
+  .mobile-inline-hero { display:block; }
+  .benefits-grid { grid-template-columns:repeat(2,1fr); }
+  .section-title { font-size:32px; }
+  .vertical-line { min-height:40px; }
+}
+
 </style>
+
+<!-- Mobile Navigation Script -->
+<script>
+document.addEventListener('DOMContentLoaded', function(){
+  const navToggle = document.querySelector('.nav-toggle');
+  const nav = document.querySelector('.main-nav');
+  if(navToggle && nav){
+    navToggle.addEventListener('click', () => {
+      const open = nav.classList.toggle('active');
+      navToggle.setAttribute('aria-expanded', open ? 'true' : 'false');
+    });
+    nav.querySelectorAll('a').forEach(a => a.addEventListener('click', () => {
+      if(window.innerWidth <= 768 && nav.classList.contains('active')) {
+        nav.classList.remove('active');
+        navToggle.setAttribute('aria-expanded','false');
+      }
+    }));
+  }
+});
+</script>
 
 </body>
 </html>
