--- a/citizenship.html
+++ b/citizenship.html
@@ -869,6 +869,63 @@ p {
   .residency-planning__title { margin-bottom: 10px; font-size: 1.6rem; }
   .residency-planning__underline { margin:0 0 24px; }
 }
+
+/* Scroll Animation Styles */
+.animate-section {
+  opacity: 0;
+  transform: translateY(50px);
+  transition: opacity 0.8s ease-out, transform 0.8s ease-out;
+}
+
+.animate-section.animate-in {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+/* Stagger animation for program cards */
+.citizenship-programs .program {
+  opacity: 1; /* visible by default */
+  transform: translateY(0);
+  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+}
+
+.citizenship-programs .program.animate-ready {
+  opacity: 0;
+  transform: translateY(40px);
+}
+
+.citizenship-programs .program.animate-in {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+/* Different delays for staggered effect */
+.citizenship-programs .program:nth-child(1) { transition-delay: 0.1s; }
+.citizenship-programs .program:nth-child(2) { transition-delay: 0.2s; }
+.citizenship-programs .program:nth-child(3) { transition-delay: 0.3s; }
+.citizenship-programs .program:nth-child(4) { transition-delay: 0.4s; }
+.citizenship-programs .program:nth-child(5) { transition-delay: 0.5s; }
+
+/* Smooth animation for residency items */
+.residency-item {
+  opacity: 1; /* visible by default */
+  transform: translateY(0);
+  transition: opacity 0.7s ease-out, transform 0.7s ease-out;
+}
+
+.residency-item.animate-ready {
+  opacity: 0;
+  transform: translateY(30px);
+}
+
+.residency-item.animate-in {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.residency-item:nth-child(1) { transition-delay: 0.1s; }
+.residency-item:nth-child(2) { transition-delay: 0.2s; }
+.residency-item:nth-child(3) { transition-delay: 0.3s; }
 </style>
 
 <!-- JavaScript -->
@@ -892,6 +949,55 @@ p {
     if(!header) return;
     if(window.scrollY > 10){ header.classList.add('scrolled'); } else { header.classList.remove('scrolled'); }
   });
+})();
+
+// Scroll Animation System
+(function() {
+  // Intersection Observer for scroll animations
+  const observerOptions = {
+    threshold: 0.1,
+    rootMargin: '0px 0px -50px 0px'
+  };
+
+  const observer = new IntersectionObserver((entries) => {
+    entries.forEach(entry => {
+      if (entry.isIntersecting) {
+        entry.target.classList.add('animate-in');
+      }
+    });
+  }, observerOptions);
+
+  // Initialize animations when DOM is loaded
+  function initScrollAnimations() {
+    // Add animate-section class to main sections
+    const sections = document.querySelectorAll('.canada-pr, .citizenship-programs, .residency-planning');
+    sections.forEach(section => {
+      section.classList.add('animate-section');
+      observer.observe(section);
+    });
+
+    // Animate program cards individually
+    const programs = document.querySelectorAll('.citizenship-programs .program');
+    programs.forEach((program, index) => {
+      // Add animate-ready class to prepare for animation
+      program.classList.add('animate-ready');
+      observer.observe(program);
+    });
+
+    // Animate residency items
+    const residencyItems = document.querySelectorAll('.residency-item');
+    residencyItems.forEach(item => {
+      item.classList.add('animate-ready');
+      observer.observe(item);
+    });
+  }
+
+  // Initialize on DOM ready
+  if (document.readyState === 'loading') {
+    document.addEventListener('DOMContentLoaded', initScrollAnimations);
+  } else {
+    initScrollAnimations();
+  }
 })();
 
 document.querySelectorAll(".toggle-features").forEach(link => {
