--- a/saintKitts.html
+++ b/saintKitts.html
@@ -59,7 +59,7 @@
   <h2 class="main-heading">Saint Kitts & Nevis Citizenship by Investment</h2>
   <div class="red-line"></div>
   <!-- Mobile inline image (shown only on small screens) -->
-  <img src="images/saint.webp" alt="Saint Kitts & Nevis" class="mobile-inline-hero" />
+  <img src="images/sainKittsNature.webp" alt="Saint Kitts & Nevis" class="mobile-inline-hero" />
         <p style="text-align: justify;">
           Investing in Saint Kitts & Nevis entitles you and your family to obtain citizenship
           and enjoy all the rights and benefits of its passport. No visit or residency is required,
@@ -76,7 +76,7 @@
 
     <!-- Right Side -->
     <div class="canada-pr-right">
-      <img src="images/saint.webp" alt="Canada City View with Flag" />
+      <img src="images/sainKittsNature.webp" alt="Canada City View with Flag" />
     </div>
   </div>
 </section>
