--- a/legalService.html
+++ b/legalService.html
@@ -40,7 +40,7 @@
     </div>
   </header>
 
-  <section class="legal-pr">
+  <section class="legal-pr animate-section">
   <div class="legal-pr-container">
     <!-- Left Side -->
     <div class="legal-pr-left">
@@ -74,7 +74,7 @@
   </div>
 </section>
 
-<section class="advisory-section">
+<section class="advisory-section animate-section">
   <div class="container">
     <p class="sub-heading">ADVISORY SERVICES</p>
     <h2 class="main-heading">Our Advisory Services For Canadian Expats</h2>
@@ -177,7 +177,7 @@
   </div>
 </section>
 
-<section class="legal-pr">
+<section class="legal-pr animate-section">
   <div class="legal-pr-container">
     <!-- Left Side -->
     <div class="legal-pr-left">
@@ -649,6 +649,53 @@ body {
   text-align: justify;  
 }
 
+/* Scroll Animation Styles */
+.animate-section {
+  opacity: 1;
+  transform: translateY(0);
+  transition: all 0.8s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.animate-section.animate-ready {
+  opacity: 0;
+  transform: translateY(60px);
+}
+
+.animate-section.animate-in {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+/* Service card animations with staggered delays */
+.service-card {
+  opacity: 1;
+  transform: translateY(0);
+  transition: all 0.6s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.service-card.animate-ready {
+  opacity: 0;
+  transform: translateY(50px);
+}
+
+.service-card.animate-in {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.service-card:nth-child(1) { transition-delay: 0s; }
+.service-card:nth-child(2) { transition-delay: 0.1s; }
+.service-card:nth-child(3) { transition-delay: 0.2s; }
+.service-card:nth-child(4) { transition-delay: 0.3s; }
+.service-card:nth-child(5) { transition-delay: 0.4s; }
+.service-card:nth-child(6) { transition-delay: 0.5s; }
+.service-card:nth-child(7) { transition-delay: 0.6s; }
+.service-card:nth-child(8) { transition-delay: 0.7s; }
+.service-card:nth-child(9) { transition-delay: 0.8s; }
+.service-card:nth-child(10) { transition-delay: 0.9s; }
+.service-card:nth-child(11) { transition-delay: 1.0s; }
+.service-card:nth-child(12) { transition-delay: 1.1s; }
+
 /* Mobile adjustments: advisory-section service cards 2 per row with reduced typography */
 @media (max-width:768px){
   .advisory-section .services { display:grid; grid-template-columns:repeat(2,1fr); gap:18px; }
@@ -676,5 +723,43 @@ document.addEventListener('DOMContentLoaded', function(){
       toggle.setAttribute('aria-expanded', (!expanded).toString());
     });
   }
+
+  // Scroll animation functionality
+  const animateSections = document.querySelectorAll('.animate-section');
+  const serviceCards = document.querySelectorAll('.service-card');
+  
+  // Prepare elements for animation
+  animateSections.forEach(section => section.classList.add('animate-ready'));
+  serviceCards.forEach(card => card.classList.add('animate-ready'));
+  
+  // Intersection Observer for sections
+  const sectionObserver = new IntersectionObserver((entries) => {
+    entries.forEach(entry => {
+      if (entry.isIntersecting) {
+        entry.target.classList.add('animate-in');
+        sectionObserver.unobserve(entry.target);
+      }
+    });
+  }, {
+    threshold: 0.15,
+    rootMargin: '0px 0px -80px 0px'
+  });
+
+  // Intersection Observer for service cards
+  const cardObserver = new IntersectionObserver((entries) => {
+    entries.forEach(entry => {
+      if (entry.isIntersecting) {
+        entry.target.classList.add('animate-in');
+        cardObserver.unobserve(entry.target);
+      }
+    });
+  }, {
+    threshold: 0.15,
+    rootMargin: '0px 0px -60px 0px'
+  });
+
+  // Observe all sections and service cards
+  animateSections.forEach(section => sectionObserver.observe(section));
+  serviceCards.forEach(card => cardObserver.observe(card));
 });
 </script>
