nav list size modify

--- a/canadaResidency.html
+++ b/canadaResidency.html
@@ -396,9 +396,10 @@ body { font-family: "Times New Roman", serif; }
   gap: 20px;
 }
 .main-nav a {
-  font-size: 14px; /* reduced */
+  font-size: 12px; /* reduced */
   text-decoration: none;
   color: #333;
+  font-family: 'Times New Roman', Times, serif;
   position: relative;
 }
 .main-nav a.active { color:#e00000; font-weight:600; }
