--- a/legalService.html
+++ b/legalService.html
@@ -321,10 +321,11 @@ body { font-family: "Times New Roman", serif; }
   gap: 20px;
 }
 .main-nav a {
-  font-size: 14px; /* reduced */
+  font-size: 12px; /* reduced */
   text-decoration: none;
   color: #333;
   position: relative;
+  font-family: 'Times New Roman', Times, serif;
 }
 .main-nav a.active { color:#e00000; font-weight:600; }
 .main-nav a.active::after { content:none !important; }
