--- a/realEstate.html
+++ b/realEstate.html
@@ -220,10 +220,11 @@ body { font-family: "Times New Roman", serif; }
   gap: 20px;
 }
 .main-nav a {
-  font-size: 14px; /* reduced */
+  font-size: 12px; /* reduced */
   text-decoration: none;
   color: #333;
   position: relative;
+  font-family: 'Times New Roman', Times, serif;
 }
 .main-nav a.active::after {
   content:none !important;
