--- a/advisoryServices/immigration.html
+++ b/advisoryServices/immigration.html
@@ -263,7 +263,8 @@ body { font-family: "Times New Roman", serif; }
   gap: 20px;
 }
 .main-nav a {
-  font-size: 14px; 
+  font-size: 12px; 
+  font-family: 'Times New Roman', Times, serif;
   text-decoration: none;
   color: #333;
   position: relative;
